Fixed ligh n' dark mode bug

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,6 @@ button {
 
 body {
 	font-size: 1.6rem;
-	color: white;
-	line-height: 1.5;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif,
+		'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
